# minwsd

./: .gitignore  C.hs  Language.hs  MinWSDiff.hs  Notes.txt  Parse.hs  README  README.md  Test.hs  Tokens.hs  Unparse.hs  WordsAndWS.hs  minwsd.cabal  minwsd.hs  stack.yaml  tests.hs
