name:           minwsd
version:        0.1
cabal-version:  >= 1.2
author:         Kevin Charter
synopsis:       A program that minimizes whitespace differences between two files.
build-type:     Simple
tested-with:    GHC == 8.4.4

Executable minwsd
  Build-Depends:  array >= 0.3 && <= 0.5.2.0,
                  base >= 4 && <= 6,
                  containers >= 0.5 && < 0.7,
                  deepseq >= 1.1.0.2 && < 2,
                  optparse-applicative >= 0.14.0.0 && < 0.15,
                  regex-pcre >= 0.94.2 && < 1,
                  text >= 0.11.0.5 && < 2,
                  Diff == 0.3.4
  Main-Is:        minwsd.hs
  Other-Modules:  C,
                  Language,
                  MinWSDiff,
                  Tokens
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -funbox-strict-fields
                  -O2
  GHC-Prof-Options: -auto-all -caf-all -rtsopts

test-suite        tests
  main-is:        tests.hs
  type:           exitcode-stdio-1.0
  build-depends:  array >= 0.3 && <= 0.5.2.0,
                  base >= 4 && <= 6,
                  containers >= 0.5 && < 0.7,
                  deepseq >= 1.1.0.2 && < 2,
                  regex-pcre >= 0.94.2 && < 1,
                  text >= 0.11.0.5 && < 2,
                  Diff == 0.3.4,
                  QuickCheck >= 2.12 && < 3
  other-modules:  C,
                  Language,
                  MinWSDiff,
                  Tokens
